--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,13 +18,32 @@
 </head>
 
 <body>
-    <header>
-        <h1>Welcome to the Grape Escape</h1>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon">
+          <svg class="bi bi-list" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+          </svg>
+        </span>
+      </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <a href="#" class="navbar-brand"><h1>Welcome to the Grape Escape</h1></a>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-items"><a href="#" class="nav-link">Our Story</a></li>
+        <li class="nav-items"><a href="#" class="nav-link">Shop Wines</a></li>
+        <li class="nav-items"><a href="#" class="nav-link">Events</a></li>
+        <li class="nav-items"><a href="#" class="nav-link">Contacts</a></li>
+      </ul>
+  </div>
+  </nav>
+</header>
 
+
+  <main>
     {% block content %}
     {% endblock %}
   </main>
-</body>
 
+</body>
 </html>
