--- a/main_app/static/styles/styles.css
+++ b/main_app/static/styles/styles.css
@@ -1,3 +1,16 @@
-#main {
-  width: 300px;
+.header {
+  background-color: #2C0E22;
+  color: #ffffff;
+  height: 86px;
+  width: 100%;
+  font-family: 'Londrina Solid', cursive;
+  font-size: 48px;
+}
+
+footer {
+  height: 414px;
+  width: 100%;
+  background-color: #CBD3D3;
+  color: #000000;
+  font-family: 'Londrina Solid', cursive;
 }
