--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,12 +16,15 @@
   <script src="{% static 'vendors/bootstrap.min.js' %}"></script>
   <!-- Custom Styles -->
   <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
-  <link rel="stylesheet" href="{% static 'scripts/app.js' %}">
 </head>
 
 <body>
  <header class="header d-flex justify-content-center align-items-center">
-     <h1>The Grape Escape</h1>
+    <h2>The Grape Escape</h2>
+      <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-list ml-3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+      </svg>
+
 </header>
 
   <main>
