add mobile and desktop styling

--- a/main_app/static/styles/styles.css
+++ b/main_app/static/styles/styles.css
@@ -11,6 +11,96 @@ body {
   font-family: 'Londrina Solid', cursive;
 }
 
+/* === nav === */
+path {
+  color: #ffffff;
+}
+
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+a:hover {
+  color: #EEDAD7;
+}
+
+.search {
+  background-color: #CBD3D3;
+  height: 62px;
+}
+
+div.mobile{
+  visibility: hidden;
+}
+
+/* === footer === */
+footer {
+  height: 144px;
+  width: 100%;
+  background-color: #CBD3D3;
+  color: #000000;
+  font-family: 'Londrina Solid', cursive;
+}
+
+/* === Admin === */
+.left{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search {
+  width: 100%;
+}
+
+.main-row {
+  background-color: #DFC7C4;
+  font-family: 'Londrina Solid', cursive;
+}
+
+.right {
+  padding: 0;
+  border-bottom: 1px solid black;
+}
+
+.subscriber {
+  background-color: #DFC7C4;
+  height: 62px;
+  font-family: 'Londrina Solid', cursive;
+  font-size: 32px;
+}
+
+.row {
+  border-bottom: 1px solid black;
+}
+
+
+@media only screen and (max-width: 500px){
+/* === Base === */
+body {
+  height: 100vh;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2C0E22;
+  color: #ffffff;
+  height: 86px;
+  width: 100%;
+  font-family: 'Londrina Solid', cursive;
+}
+
+div.desktop {
+  display: none;
+}
+
+div.mobile {
+  visibility: visible;
+}
+
 .search {
   background-color: #CBD3D3;
   height: 62px;
@@ -41,4 +131,11 @@ footer {
   height: 62px;
   font-family: 'Londrina Solid', cursive;
   font-size: 32px;
+}
+}
+
+@media only screen and (max-width: 320px){
+  path {
+    visibility: hidden;
+  }
 }
