--- a/main_app/templates/admin.html
+++ b/main_app/templates/admin.html
@@ -2,45 +2,107 @@
 {% load static %}
 
 {% block content %}
-    <!----- search bar ----->
-    <form class="search form-inline d-flex justify-content-center">
+    <div class="desktop">
+        
+        <div class="container p-5">
+            <!----- search bar ----->
+            <form class="search form-inline mb-4">
+                <!----- icon ----->
+                <svg class="ml-2 mr-3" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+                    <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+                </svg>
 
-        <!----- icon ----->
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-            <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-        </svg>
+                <!----- input ----->
+                <input class="form-control form-control-sm mr-3 w-40 " type="text" placeholder="Search"
+                aria-label="Search">
 
-        <!----- input ----->
-        <input class="form-control form-control-sm mr-3 w-50 " type="text" placeholder="Search"
-        aria-label="Search">
-
-        <!----- button ----->
-        <input class="shadow" type="submit" value="Search">
-    </form>
-
-    <!----- loop for all subscribers ----->
-    {% for subscriber in subscribers %}
-    <div class="container">
-        <div class="row">
-            <!----- left ----->
-            <!----- checkbox ----->
-            <div class="left col-2 my-auto pt-4 icons">
-                <div class="d-flex justify-content-center">
-                    <input type="checkbox" name="" id="">
+                <!----- button ----->
+                <input class="shadow" type="submit" value="Search">
+            </form>
+            <div class="main-row row p-2">
+                <!----- left ----->
+                <!----- checkbox ----->
+                <div class="left col-2 my-auto">
+                    <div class="d-flex justify-content-center">
+                        <input type="checkbox" name="" id="">
+                    </div> 
                 </div> 
-            </div> 
-
-            <!----- right ----->
-            <!----- subscriber info -----> 
-            <div class="right col">
-                <div class="subscriber d-flex align-items-center pl-2">First Name:</div> <div class="p-2">{{ subscriber.first_name }}</div>
-                <div class="subscriber d-flex align-items-center pl-2">Last Name:</div> <div class="p-2">{{ subscriber.last_name }}</div>
-                <div class="subscriber d-flex align-items-center pl-2">Email:</div> <div class="p-2">{{ subscriber.email }}</div>
+                <div class="col-sm">
+                    First Name
+                </div>
+                <div class="col-sm">
+                    Last Name
+                </div>
+                <div class="col-sm">
+                    Email
+                </div>
             </div>
-              
-        </div>
-    </div>
-    {% endfor %}
+            {% for subscriber in subscribers %}
+            <div class="row p-2">
+                <div class="left col-2 my-auto">
+                    <div class="d-flex justify-content-center">
+                        <input type="checkbox" name="" id="">
+                    </div> 
+                </div> 
+                <div class="col-sm-3">
+                    {{ subscriber.first_name }}
+                </div>
+                <div class="col-sm-3 ml-4">
+                    {{ subscriber.last_name }}
+                </div>
+                <div class="col-sm-3">
+                    {{ subscriber.email }}
+                </div>
+                
+            </div>
+            {% endfor %}
+          </div>
 
+
+    </div>
+
+    <!----- search bar ----->
+    <div class="mobile">
+        <form class="search form-inline d-flex justify-content-center">
+
+            <!----- icon ----->
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+                <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+            </svg>
+
+            <!----- input ----->
+            <input class="form-control form-control-sm mr-3 w-50 " type="text" placeholder="Search"
+            aria-label="Search">
+
+            <!----- button ----->
+            <input class="shadow" type="submit" value="Search">
+        </form>
+
+        <!----- loop for all subscribers ----->
+        {% for subscriber in subscribers %}
+        <div class="container">
+            <div class="row">
+                <!----- left ----->
+                <!----- checkbox ----->
+                <div class="left col-2 my-auto pt-4 icons">
+                    <div class="d-flex justify-content-center">
+                        <input type="checkbox" name="" id="">
+                    </div> 
+                </div> 
+
+                <!----- right ----->
+                <!----- subscriber info -----> 
+                <div class="right col">
+                    <div class="subscriber d-flex align-items-center pl-2">First Name:</div> <div class="p-2">{{ subscriber.first_name }}</div>
+                    <div class="subscriber d-flex align-items-center pl-2">Last Name:</div> <div class="p-2">{{ subscriber.last_name }}</div>
+                    <div class="subscriber d-flex align-items-center pl-2">Email:</div> <div class="p-2">{{ subscriber.email }}</div>
+                </div>
+                
+            </div>
+        </div>
+    
+    {% endfor %}
+    </div>
 {% endblock %}
