--- a/main_app/static/styles/styles.css
+++ b/main_app/static/styles/styles.css
@@ -3,6 +3,10 @@ body {
   height: 100vh;
 }
 
+main {
+ height: 100%;
+}
+
 .header {
   background-color: #2C0E22;
   color: #ffffff;
@@ -31,7 +35,11 @@ a:hover {
 }
 
 div.mobile{
-  visibility: hidden;
+  display: none;
+}
+
+.navbar-nav {
+  font-family: 'Hind Siliguri', sans-serif;
 }
 
 /* === footer === */
@@ -98,7 +106,7 @@ div.desktop {
 }
 
 div.mobile {
-  visibility: visible;
+  display: block;
 }
 
 .search {
