--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Grape Escape</title>
   <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap" rel="stylesheet">
   <!-- BOOTSTRAP -->
   <link rel="stylesheet" href="{% static 'vendors/bootstrap-grid.min.css' %}">
   <link rel="stylesheet" href="{% static 'vendors/bootstrap-reboot.min.css' %}">
