--- a/main_app/templates/admin.html
+++ b/main_app/templates/admin.html
@@ -6,20 +6,22 @@
         
         <div class="container p-5">
             <!----- search bar ----->
-            <form class="search form-inline mb-4">
-                <!----- icon ----->
-                <svg class="ml-2 mr-3" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-                    <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-                </svg>
+            <div class="search-container">
+                <form class="search form-inline mb-4">
+                    <!----- icon ----->
+                    <svg class="ml-2 mr-3" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+                        <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+                    </svg>
 
-                <!----- input ----->
-                <input class="form-control form-control-sm mr-3 w-40 " type="text" placeholder="Search"
-                aria-label="Search">
+                    <!----- input ----->
+                    <input class="form-control form-control-sm mr-3 w-40 " type="text" placeholder="Search"
+                    aria-label="Search">
 
-                <!----- button ----->
-                <input class="shadow" type="submit" value="Search">
-            </form>
+                    <!----- button ----->
+                    <input class="shadow" type="submit" value="Search">
+                </form>
+            </div>
             <div class="main-row row p-2">
                 <!----- left ----->
                 <!----- checkbox ----->
