--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -24,7 +24,7 @@
 rem:form.as_p cant work by itself ___ subscriber_form.as_p nows working
  -->
  <div class="newsletter-form">
-<form action="{% url 'home' %}" method="POST" class="d-inline-block">
+<form action="{% url 'home' %}" method="POST">
   {% csrf_token %}
   {{subscriber_form.as_p}}
   <input type="submit" value="Sign Up">
